--- a/styles/style.css
+++ b/styles/style.css
@@ -2,13 +2,18 @@ header {
     position: absolute;
     width: 1600px;
     height: 80px;
-    left: 0px;
-    top: 0px;
     background: #FFFFFF;
-    padding: 24px 25px;
 }
 
+a {
+    text-decoration: none;
+}
 .title-main {
+    position: absolute;
+    width: 145px;
+    height: 31px;
+    left: 215px;
+    top: 24px;
     font-family: Raleway;
     font-style: normal;
     font-weight: bold;
@@ -17,8 +22,6 @@ header {
     /* identical to box height */
     letter-spacing: 0.03em;
     color: #2196F3;
-    margin-right: 93px;
-    padding-left: 215px;
 }
 
 .title {
@@ -32,10 +35,6 @@ header {
     color: black;
 }
 
-.nav {
-    display: inline-block;
-    margin-right: 331px;
-}
 
 .nav-li {
     font-family: Roboto;
@@ -48,6 +47,11 @@ header {
 }
 
 .nav-li-stud {
+    position: absolute;
+    width: 49px;
+    height: 16px;
+    left: 453px;
+    top: 32px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -55,24 +59,46 @@ header {
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #2196F3;
-    padding-right: 50px;
 }
 
 .nav-li-port {
-    padding-right: 50px;
-    color: black;
+    position: absolute;
+    width: 77px;
+    height: 16px;
+    left: 552px;
+    top: 32px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #212121;
 }
 
 .nav-li-cont {
-    color: black;
+    position: absolute;
+    width: 68px;
+    height: 16px;
+    left: 679px;
+    top: 32px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #212121;
 }
 
-.contacts {
-    display: inline;
-}
+
 
 .cont-mail {
-    padding-right: 50px;
+    position: absolute;
+    width: 135px;
+    height: 16px;
+    left: 1078px;
+    top: 32px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -83,6 +109,11 @@ header {
 }
 
 .cont-tel {
+    position: absolute;
+    width: 122px;
+    height: 16px;
+    left: 1263px;
+    top: 32px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -93,15 +124,18 @@ header {
 }
 
 .hero {
-    background: #2F303A;
+    position: absolute;
     width: 1600px;
     height: 600px;
     left: 0px;
-    top: 200px;
-    
+    top: 80px;
+    background: #2F303A;
 }
 
 .main-hero {
+    width: 696px;
+    height: 120px;
+    padding: 200px 452px 280px 452px ;
     font-family: Roboto;
     font-style: normal;
     font-weight: 900;
@@ -112,27 +146,303 @@ header {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
-    padding: 200px 452px 280px 452px;
 }
 
-/*
-.button {
+
+.button-order {
     position: absolute;
-    width: 136px;
-    height: 30px;
-    left: 732px;
-    top: 440px;
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    top: 350px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    margin-top: 30px;
+}
+
+.button-text {
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 30px;
-    
+    /* identical to box height, or 187% */
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
-    padding-top: 40px;
-    background:#2196F3;
+    padding-left: 32px;
+    padding-right: 32px;
 }
+
+.act {
+   position: absolute;
+    width: 1170px;
+    height: 101px;
+    left: 215px;
+    top: 774px;
+}
+
+.activities {
+    display: inline-flex;
+    width: 1400px;
+    list-style-type: none;
+}
+
+.act-detail {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #212121;
+}
+
+.li-style {
+    width: 270px;
+    height: 75px;
+    left: 215px;
+    top: 800px;
+}
+
+.act-description {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+
+.wwd-title {
+    position: absolute;
+    width: 376px;
+    height: 42px;
+    left: 612px;
+    top: 969px;
+    margin-bottom: 50px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.wwd-item1 {
+    position: absolute;
+    width: 370px;
+    height: 294px;
+    left: 215px;
+    top: 1120px;
+    list-style-type: none;
+}
+
+.wwd-item2 {
+    position: absolute;
+    width: 370px;
+    height: 294px;
+    left: 615px;
+    top: 1120px;
+    list-style-type: none;
+}
+
+.wwd-item3 {
+    position: absolute;
+    width: 370px;
+    height: 294px;
+    left: 1015px;
+    top: 1120px;
+    list-style-type: none;
+}
+
+
+.our-tema {
+    position: absolute;
+    width: 1600px;
+    height: 648px;
+    left: 0px;
+    top: 1449px;
+    background: #F5F4FA;
+}
+
+
+.tema-title {
+    position: absolute;
+    width: 264px;
+    height: 42px;
+    left: 668px;
+    top: 94px;
+    margin-bottom: 50px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+
+.tema-item1 {
+    position: absolute;
+    width: 270px;
+    height: 260px;
+    left: 215px;
+    top: 186px;
+    border-radius: 0px;
+    list-style-type: none;
+    }
+
+.tema-item2 {
+    position: absolute;
+    width: 270px;
+    height: 260px;
+    left: 515px;
+    top: 186px;
+    border-radius: 0px;
+    list-style-type: none;
+}
+
+.tema-item3 {
+    position: absolute;
+    width: 270px;
+    height: 260px;
+    left: 815px;
+    top: 186px;
+    border-radius: 0px;
+    list-style-type: none;
+}
+
+.tema-item4 {
+    position: absolute;
+    width: 270px;
+    height: 260px;
+    left: 1115px;
+    top: 186px;
+    border-radius: 0px;
+    list-style-type: none;
+}
+
+.tema-member-name {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+
+.tema-member-position {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+
+.foot {
+    position: absolute;
+    width: 1600px;
+    height: 252px;
+    left: 0px;
+    top: 2097px;
+    background: #2F303A;
+}
+
+.footer-logo {
+    position: absolute;
+    width: 145px;
+    height: 31px;
+    left: 215px;
+    top: 60px;
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 31px;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+    color: #2196F3;
+}
+
+.footer-address {
+    position: absolute;
+    width: 231px;
+    height: 21px;
+    left: 215px;
+    top: 111px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.footer-mail {
+    position: absolute;
+    width: 231px;
+    height: 21px;
+    left: 215px;
+    top: 141px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-tel {
+    position: absolute;
+    width: 231px;
+    height: 21px;
+    left: 215px;
+    top: 171px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    /* or 171% */
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-logo-style {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 31px;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+    color: white;
+}
+
+
+/*Portfolio styles */
+
