--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,6 +99,10 @@
   top: 0;
 }
 
+.nine {
+  position: absolute;
+  top: 88px;
+}
 .port-list {
   position: absolute;
   top: 88px;
@@ -134,6 +138,67 @@
   /* identical to box height, or 187% */
   letter-spacing: 0.03em;
   color: var(--base-color);
+}
+
+.li-port.tech {
+  position: absolute;
+  top: 50px;
+  right: 800px;
+}
+
+.li-port.poster {
+  position: absolute;
+  top: 50px;
+  right: 400px;
+}
+.li-port.rest {
+  position: absolute;
+  top: 50px;
+  left: 800px;
+}
+.li-port.project {
+  position: absolute;
+  top: 484px;
+  right: 800px;
+}
+.li-port.boxes {
+  position: absolute;
+  top: 484px;
+  right: 400px;
+}
+.li-port.inspire {
+  position: absolute;
+  top: 484px;
+  left: 800px;
+}
+
+.li-port.edition {
+  position: absolute;
+  top: 936px;
+  right: 800px;
+}
+
+.li-port.lab {
+  position: absolute;
+  top: 936px;
+  right: 400px;
+}
+
+.li-port.edition {
+  position: absolute;
+  bottom: 110px;
+  right: 800px;
+}
+
+.li-port.lab {
+  position: absolute;
+  bottom: 110px;
+  right: 400px;
+}
+.li-port.busy {
+  position: absolute;
+  bottom: 110px;
+  left: 800px;
 }
 
 .foot {
