--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,288 +1,294 @@
-:root {
-    --base-color: #757575;
-    --title-base-color: #757575;
-    --base-font: Roboto;
-  }
-  
-hr {
-    position: absolute;
-    width: 1600px;
-    height: 0px;
-    left: 0px;
-    top: 80px;
-    border: 1px solid #ECECEC;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-  .portfolio {
-    position: absolute;
-    width: 1170px;
-    height: 1360px;
-    left: 215px;
-    top: 174px;
-    font-family: var(--base-font);
-  }
-  
-  .port-nav-items {
-    list-style-type: none;
-  }
-  
-  .port-nav-item {
-    font: var(--base-font);
-    border-style: none;
-  }
-  
-  .port-nav-item.all {
-    position: absolute;
-    width: 73px;
-    height: 38px;
-    left: 280px;
-    top: 0px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    height: 38px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #ffffff;
-    background-color: #2196f3;
-    border-radius: 4px;
-  }
-  
-  .port-nav-item.web,
-  .app,
-  .design,
-  .market {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    height: 38px;
-    /* identical to box height, or 162% */
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #212121;
-    background: #f5f4fa;
-    border-radius: 4px;
-  }
-  
-  .port-nav-item.web {
-    position: absolute;
-    width: 128px;
-    height: 38px;
-    left: 361px;
-    top: 0;
-  }
-  
-  .port-nav-item.app {
-    position: absolute;
-    width: 145px;
-    height: 38px;
-    left: 497px;
-    top: 0px;
-  }
-  
-  .port-nav-item.design {
-    position: absolute;
-    width: 103px;
-    height: 38px;
-    left: 650px;
-    top: 0px;
-  }
-  
-  .port-nav-item.market {
-    position: absolute;
-    width: 130px;
-    height: 38px;
-    left: 761px;
-    top: 0;
-  }
-  
-  .port-list {
-    position: relative;
-    top: 30px;
-    list-style-type: none;
-    background: #ffffff;
-    box-sizing: border-box;
-    padding: 0px 0px 0px 0px;
-    font: var(--base-font);
-  }
-  .li-port {
-    display: inline-block;
-  }
-  
-  .port-list .li-port-title {
-    font-family: var(--base-font);
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 36px;
-    text-indent: 24px;
-    /* identical to box height, or 200% */
-    letter-spacing: 0.06em;
-    color: var(--base-color);
-  }
-  
-  .li-port-desciption {
-    font-family: var(--base-font);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
-    text-indent: 24px;
-    /* identical to box height, or 187% */
-    letter-spacing: 0.03em;
-    color: var(--base-color);
-  }
-  
-  .li-port.tech {
-    position: absolute;
-    top: 50px;
-    right: 800px;
-  }
-  
-  .li-port.poster {
-    position: absolute;
-    top: 50px;
-    right: 400px;
-  }
-  .li-port.rest {
-    position: absolute;
-    top: 50px;
-    left: 800px;
-  }
-  .li-port.project {
-    position: absolute;
-    top: 484px;
-    right: 800px;
-  }
-  .li-port.boxes {
-    position: absolute;
-    top: 484px;
-    right: 400px;
-  }
-  .li-port.inspire {
-    position: absolute;
-    top: 484px;
-    left: 800px;
-  }
-  
-  .li-port.edition {
-    position: absolute;
-    top: 936px;
-    right: 800px;
-  }
-  
-  .li-port.lab {
-    position: absolute;
-    top: 936px;
-    right: 400px;
-  }
-  
-  .li-port.edition {
-    position: absolute;
-    top: 936px;
-    right: 800px;
-  }
-  
-  .li-port.lab {
-    position: absolute;
-    top: 936px;
-    right: 400px;
-  }
-  .li-port.busy {
-    position: absolute;
-    top: 936px;
-    left: 800px;
-  }
-  
-  .foot {
-    position: absolute;
-    width: 1600px;
-    height: 252px;
-    left: 0px;
-    top: 1628px;
-    background: #2f303a;
-  }
-  
-  .footer-logo {
-    position: absolute;
-    width: 145px;
-    height: 31px;
-    left: 215px;
-    top: 60px;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 31px;
-    /* identical to box height */
-    letter-spacing: 0.03em;
-    color: #2196f3;
-  }
-  
-  .footer-logo-style {
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 31px;
-    /* identical to box height */
-    letter-spacing: 0.03em;
-    color: white;
-  }
-  
-  .footer-address {
-    position: absolute;
-    width: 231px;
-    height: 21px;
-    left: 215px;
-    top: 111px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    /* or 171% */
-    letter-spacing: 0.03em;
-    color: #ffffff;
-  }
-  
-  .footer-mail {
-    position: absolute;
-    width: 231px;
-    height: 21px;
-    left: 215px;
-    top: 141px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    /* or 171% */
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-  }
-  
-  .footer-tel {
-    position: absolute;
-    width: 231px;
-    height: 21px;
-    left: 215px;
-    top: 171px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    /* or 171% */
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-  }
+:root {
+  --base-color: #757575;
+  --title-base-color: #757575;
+  --base-font: Roboto;
+}
+
+hr {
+  position: absolute;
+  width: 1600px;
+  height: 0px;
+  left: 0px;
+  top: 80px;
+  border: 1px solid #ececec;
+}
+
+.portfolio {
+  position: absolute;
+  width: 1170px;
+  height: 1360px;
+  left: 215px;
+  top: 174px;
+  font-family: var(--base-font);
+}
+
+.port-nav-items {
+  list-style-type: none;
+}
+
+.port-nav-item {
+  font: var(--base-font);
+  border-style: none;
+}
+
+.port-nav-item.all {
+  position: absolute;
+  width: 73px;
+  height: 38px;
+  left: 280px;
+  top: 0px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  height: 38px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: #2196f3;
+  border-radius: 4px;
+}
+
+.port-nav-item.web,
+.app,
+.design,
+.market {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  height: 38px;
+  /* identical to box height, or 162% */
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+
+.port-nav-item.web {
+  position: absolute;
+  width: 128px;
+  height: 38px;
+  left: 361px;
+  top: 0;
+}
+
+.port-nav-item.app {
+  position: absolute;
+  width: 145px;
+  height: 38px;
+  left: 497px;
+  top: 0px;
+}
+
+.port-nav-item.design {
+  position: absolute;
+  width: 103px;
+  height: 38px;
+  left: 650px;
+  top: 0px;
+}
+
+.port-nav-item.market {
+  position: absolute;
+  width: 130px;
+  height: 38px;
+  left: 761px;
+  top: 0;
+}
+
+.port-list {
+  position: relative;
+  top: 30px;
+  list-style-type: none;
+  background: #ffffff;
+  box-sizing: border-box;
+  padding: 0px 0px 0px 0px;
+  font: var(--base-font);
+}
+.li-port {
+  display: inline-block;
+}
+
+.port-list .li-port-title {
+  font-family: var(--base-font);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+  text-indent: 24px;
+  /* identical to box height, or 200% */
+  letter-spacing: 0.06em;
+  color: var(--base-color);
+}
+
+.li-port-desciption {
+  font-family: var(--base-font);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  text-indent: 24px;
+  /* identical to box height, or 187% */
+  letter-spacing: 0.03em;
+  color: var(--base-color);
+}
+
+.li-port.tech {
+  position: absolute;
+  top: 50px;
+  right: 800px;
+}
+
+.li-port.poster {
+  position: absolute;
+  top: 50px;
+  right: 400px;
+}
+.li-port.rest {
+  position: absolute;
+  top: 50px;
+  left: 800px;
+}
+.li-port.project {
+  position: absolute;
+  top: 484px;
+  right: 800px;
+}
+.li-port.boxes {
+  position: absolute;
+  top: 484px;
+  right: 400px;
+}
+.li-port.inspire {
+  position: absolute;
+  top: 484px;
+  left: 800px;
+}
+
+.li-port.edition {
+  position: absolute;
+  top: 936px;
+  right: 800px;
+}
+
+.li-port.lab {
+  position: absolute;
+  top: 936px;
+  right: 400px;
+}
+
+.li-port.edition {
+  position: absolute;
+  top: 936px;
+  right: 800px;
+}
+
+.li-port.lab {
+  position: absolute;
+  top: 936px;
+  right: 400px;
+}
+.li-port.busy {
+  position: absolute;
+  top: 936px;
+  left: 800px;
+}
+
+.foot {
+  position: absolute;
+  width: 1600px;
+  height: 252px;
+  left: 0px;
+  top: 1628px;
+  background: #2f303a;
+}
+
+.footer-logo {
+  position: absolute;
+  width: 145px;
+  height: 31px;
+  left: 215px;
+  top: 60px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: #2196f3;
+}
+
+.footer-logo-style {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: white;
+}
+
+.footer-address {
+  position: absolute;
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 111px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.footer-mail {
+  position: absolute;
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 141px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-tel {
+  position: absolute;
+  width: 231px;
+  height: 21px;
+  left: 215px;
+  top: 171px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
